--- a/_config.yml
+++ b/_config.yml
@@ -24,10 +24,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@domain.com
-author: GitHub User
-copyright: Copyright © 1970-2010
+title: UCI genPALS
+email: uci.genpals@gmail.com
+author: Sam Morabito & Fairlie Reese
+copyright: Copyright © 2020-2021
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -147,3 +147,6 @@ plugins:
   - jekyll-sitemap
   - jekyll-paginate
   - jekyll-spaceship
+
+
+remote_theme: "jeffreytse/jekyll-theme-yat"
