--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@
 
 title: UCI genPALS
 email: uci.genpals@gmail.com
-author: Sam Morabito & Fairlie Reese
+author: UCI genPALS
 copyright: Copyright © 2020-2021
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
@@ -96,13 +96,13 @@ yat:
 # theme_color: snowwhite
 #
 # Custom color as below:
-# theme_color: "#882250"
+theme_color: "#882250"
 
 # Night/Dark mode
 # Default mode is "auto", "auto" is for auto nightshift
 # (19:00 - 07:00), "manual" is for manual toggle, and
 # "on/off" is for always on/off.
-# night_mode: "auto"
+night_mode: "auto"
 
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
@@ -113,19 +113,12 @@ yat:
 #   - tags.html
 #   - about.md
 
-# Page default value
-# defaults:
-#   home:
-#     heading: "Your awesome heading"
-#     subheading: "Your awesome subheading"
-#     banner: "Your image url"
-
 # Pagination setting
 # paginate: 5
 
 # Disqus comments
-# disqus:
-#   shortname: "Your Disqus username"
+disqus:
+  shortname: "https-uci-genpals-github-io"
 
 # Gitment comments
 # gitment:
