--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
-  heading: "Your awesome heading"
-  subheading: "Your awesome subheading"
-  banner: "Your image url"
+  heading: "UCI genPALS"
+  subheading: "genomics practical applications and learning seminar"
+  banner: "images/banners/brains.jpg"
