--- a/_config.yml
+++ b/_config.yml
@@ -96,13 +96,13 @@ yat:
 # theme_color: snowwhite
 #
 # Custom color as below:
-theme_color: "#882250"
+# theme_color: "#882250"
 
 # Night/Dark mode
 # Default mode is "auto", "auto" is for auto nightshift
 # (19:00 - 07:00), "manual" is for manual toggle, and
 # "on/off" is for always on/off.
-night_mode: "auto"
+night_mode: "on"
 
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
